--- a/nec/platformio.ini
+++ b/nec/platformio.ini
@@ -16,3 +16,9 @@
 #
 # Automatic targets - enable auto-uploading
 # targets = upload
+
+[env:nanoatmega328]
+platform = atmelavr
+framework = arduino
+board = nanoatmega328
+targets = upload
