shitty commit but hey...

--- a/pyramid/platformio.ini
+++ b/pyramid/platformio.ini
@@ -23,3 +23,10 @@ platform = atmelavr
 framework = arduino
 board = nanoatmega328
 targets = upload
+
+
+[env:sparkfun_promicro16]
+platform = atmelavr
+framework = arduino
+board = sparkfun_promicro16
+targets = upload
